<resources>
    <string name="app_name">NFCKeychain</string>
    <string name="mimeType">application/com.pawel.nfckeychain</string>


    
    <string name="add_master">Add master key</string>
    <string name="door_status">Door status</string>
    <string name="forget_everything">Forget everything</string>
    <string name="main_menu">Main menu</string>


    <string name="open">Open</string>
    <string name="receive_key">Receive key</string>
    <string name="change_key">Change key</string>
    <string name="manage_keys">Manage keys</string>
    <string name="exit">Exit</string>

    <string name="inputMasterInstruction">Input your master key below:</string>
    <string name="inputSsidInstruction">Input your wifi ssid below:</string>
    <string name="inputPasswordInstruction">Input your wifi password below:</string>
    <string name="emptyFieldsError">All fields has to be filled!</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="save">Save</string>
    <string name="nfc_error">NFC ERROR</string>
    <string name="listening">Listening</string>
    <string name="receivied">Recievied</string>
    <string name="scanning">Scanning</string>
    <string name="no_guest_error">You have to receive invite before saving.</string>
    <string name="user_saved">User saved.</string>

    <string name="addGuest">Add new guest</string>
    <string name="delete">Delete</string>
    <string name="enterName">Enter username</string>
    <string name="add">Add</string>

    <string name="door">Door state:</string>
    <string name="lock">Lock state:</string>

</resources>
