<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/surfaceLayout"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/scanning"
                android:id="@+id/NFCStatusTextView"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/downButtonLayout"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/surfaceLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:text="@string/save"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/saveButton"
                android:text="@string/cancel"/>

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>